--- a/app/views/study_items/index.html.erb
+++ b/app/views/study_items/index.html.erb
@@ -3,7 +3,7 @@
 <%= link_to 'Novo item de estudo', new_study_item_path %>
 
 <% @study_items.each do |study_item| %>
-  <p><%= study_item.title %></p>
-  <p><%= study_item.category %></p>
-  <p><%= study_item.description %></p>
+  <%= render study_item %>
+
+  <div><%= link_to 'Ver detalhes', study_item %></div>
 <% end %>
