--- a/app/views/study_items/new.html.erb
+++ b/app/views/study_items/new.html.erb
@@ -1,17 +1,3 @@
 <h1>Novo item de estudo</h1>
 
-<%= form_with model: @study_item do |f| %>
-  <div>
-    <%= f.label :title, 'Título' %>
-    <%= f.text_field :title %>
-  </div>
-  <div>
-    <%= f.label :category, 'Categoria' %>
-    <%= f.text_field :category %>
-  </div>
-  <div>
-    <%= f.label :description, 'Descrição' %>
-    <%= f.text_area :description %>
-  </div>
-  <%= f.submit 'Enviar' %>
-<% end %>
+<%= render partial: 'form', locals: { study_item: @study_item, button_text: 'Criar' } %>
