Item de estudo usa o model categoria

--- a/app/views/study_items/_study_item.html.erb
+++ b/app/views/study_items/_study_item.html.erb
@@ -1,5 +1,5 @@
 <h2><%= study_item.title %></h2>
 
-<h3><%= study_item.category %></h3>
+<h3><%= study_item.category.title %></h3>
 
 <h4><%= study_item.description %></h4>
