--- a/app/views/study_items/_form.html.erb
+++ b/app/views/study_items/_form.html.erb
@@ -8,8 +8,8 @@
     <%= f.text_field :title %>
   </div>
   <div>
-    <%= f.label :category, 'Categoria' %>
-    <%= f.text_field :category %>
+    <%= f.label :category_id, 'Categoria' %>
+    <%= f.collection_select :category_id, categories, :id, :title %>
   </div>
   <div>
     <%= f.label :description, 'Descrição' %>
