--- a/app/views/study_items/new.html.erb
+++ b/app/views/study_items/new.html.erb
@@ -1,3 +1,3 @@
 <h1>Novo item de estudo</h1>
 
-<%= render partial: 'form', locals: { study_item: @study_item, button_text: 'Criar' } %>
+<%= render partial: 'form', locals: { study_item: @study_item, categories: @categories, button_text: 'Criar' } %>
